2006-09-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/job/main.py:
	* flumotion/launch/inspect.py:
	* flumotion/manager/worker.py:
	* flumotion/component/consumers/httpstreamer/admin_gtk.py:
	* flumotion/worker/worker.py:
	* flumotion/component/base/admin_gtk.py:
	* flumotion/admin/command/main.py:
	* flumotion/admin/text/admin_text.py:
	* flumotion/admin/text/main.py:
	* flumotion/component/base/admin_text.py:
	* flumotion/admin/admin.py:
	  various pychecker-assisted cleanups
	* misc/pycheckerrc:
	  disable shadows, since the output it gives does not help you fix
	  the problem

2006-09-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/worker/checks/video010.py:
	  remove unused import

2006-09-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/random/configuration:
	  update notes
	* flumotion/common/config.py:
	* flumotion/common/errors.py:
	* flumotion/common/fxml.py:
	  make ConfigError and ParserError more strictly defined in
	  arguments; obviously it was necessary, because a broken XML
	  resulted in a useless error message

2006-09-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/identity.py:
	* flumotion/component/plugs/identity.py:
	* flumotion/component/plugs/adminaction.py:
	* flumotion/manager/base.py:
	* flumotion/manager/main.py:
	* flumotion/manager/manager.py:
	* flumotion/test/test_manager_manager.py:
	  "anything" is not really a good alternative to a decent interface.
	  And really, we are dealing with identities that can be either
	  local or remote; so implement it as such.
	  Disambiguate remoteIdentity where appropriate.

2006-09-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/misc/httpfile/httpfile.py:
	  Make pychecker happy.  Lament the absence of documentation
	  or comments.

2006-09-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/admin.py:
	* flumotion/twisted/pb.py: